NativeObjects/bcm2835.h


typedef enum
{
    BCM2835_GPIO_FSEL_INPT  = 0b000,   
    BCM2835_GPIO_FSEL_OUTP  = 0b001,   
    BCM2835_GPIO_FSEL_ALT0  = 0b100,   
    BCM2835_GPIO_FSEL_ALT1  = 0b101,   
    BCM2835_GPIO_FSEL_ALT2  = 0b110,   
    BCM2835_GPIO_FSEL_ALT3  = 0b111,   
    BCM2835_GPIO_FSEL_ALT4  = 0b011,   
    BCM2835_GPIO_FSEL_ALT5  = 0b010,   
    BCM2835_GPIO_FSEL_MASK  = 0b111    
} bcm2835FunctionSelect;
typedef enum
{
    BCM2835_GPIO_PUD_OFF     = 0b00,   
    BCM2835_GPIO_PUD_DOWN    = 0b01,   
    BCM2835_GPIO_PUD_UP      = 0b10    
} bcm2835PUDControl;
typedef enum
{
    RPI_GPIO_P1_03        =  0,  
    RPI_GPIO_P1_05        =  1,  
    RPI_GPIO_P1_07        =  4,  
    RPI_GPIO_P1_08        = 14,  
    RPI_GPIO_P1_10        = 15,  
    RPI_GPIO_P1_11        = 17,  
    RPI_GPIO_P1_12        = 18,  
    RPI_GPIO_P1_13        = 21,  
    RPI_GPIO_P1_15        = 22,  
    RPI_GPIO_P1_16        = 23,  
    RPI_GPIO_P1_18        = 24,  
    RPI_GPIO_P1_19        = 10,  
    RPI_GPIO_P1_21        =  9,  
    RPI_GPIO_P1_22        = 25,  
    RPI_GPIO_P1_23        = 11,  
    RPI_GPIO_P1_24        =  8,  
    RPI_GPIO_P1_26        =  7,  
    RPI_V2_GPIO_P1_03     =  2,  
    RPI_V2_GPIO_P1_05     =  3,  
    RPI_V2_GPIO_P1_07     =  4,  
    RPI_V2_GPIO_P1_08     = 14,  
    RPI_V2_GPIO_P1_10     = 15,  
    RPI_V2_GPIO_P1_11     = 17,  
    RPI_V2_GPIO_P1_12     = 18,  
    RPI_V2_GPIO_P1_13     = 27,  
    RPI_V2_GPIO_P1_15     = 22,  
    RPI_V2_GPIO_P1_16     = 23,  
    RPI_V2_GPIO_P1_18     = 24,  
    RPI_V2_GPIO_P1_19     = 10,  
    RPI_V2_GPIO_P1_21     =  9,  
    RPI_V2_GPIO_P1_22     = 25,  
    RPI_V2_GPIO_P1_23     = 11,  
    RPI_V2_GPIO_P1_24     =  8,  
    RPI_V2_GPIO_P1_26     =  7,  
    RPI_V2_GPIO_P5_03     = 28,  
    RPI_V2_GPIO_P5_04     = 29,  
    RPI_V2_GPIO_P5_05     = 30,  
    RPI_V2_GPIO_P5_06     = 31,  
    RPI_BPLUS_GPIO_J8_03     =  2,  
    RPI_BPLUS_GPIO_J8_05     =  3,  
    RPI_BPLUS_GPIO_J8_07     =  4,  
    RPI_BPLUS_GPIO_J8_08     = 14,  
    RPI_BPLUS_GPIO_J8_10     = 15,  
    RPI_BPLUS_GPIO_J8_11     = 17,  
    RPI_BPLUS_GPIO_J8_12     = 18,  
    RPI_BPLUS_GPIO_J8_13     = 27,  
    RPI_BPLUS_GPIO_J8_15     = 22,  
    RPI_BPLUS_GPIO_J8_16     = 23,  
    RPI_BPLUS_GPIO_J8_18     = 24,  
    RPI_BPLUS_GPIO_J8_19     = 10,  
    RPI_BPLUS_GPIO_J8_21     =  9,  
    RPI_BPLUS_GPIO_J8_22     = 25,  
    RPI_BPLUS_GPIO_J8_23     = 11,  
    RPI_BPLUS_GPIO_J8_24     =  8,  
    RPI_BPLUS_GPIO_J8_26     =  7,  
    RPI_BPLUS_GPIO_J8_29     =  5,  
    RPI_BPLUS_GPIO_J8_31     =  6,  
    RPI_BPLUS_GPIO_J8_32     =  12, 
    RPI_BPLUS_GPIO_J8_33     =  13, 
    RPI_BPLUS_GPIO_J8_35     =  19, 
    RPI_BPLUS_GPIO_J8_36     =  16, 
    RPI_BPLUS_GPIO_J8_37     =  26, 
    RPI_BPLUS_GPIO_J8_38     =  20, 
    RPI_BPLUS_GPIO_J8_40     =  21, 
} RPiGPIOPin;
typedef enum
{
    BCM2835_SPI_BIT_ORDER_LSBFIRST = 0,  
    BCM2835_SPI_BIT_ORDER_MSBFIRST = 1   
}bcm2835SPIBitOrder;
typedef enum
{
    BCM2835_SPI_MODE0 = 0,  
    BCM2835_SPI_MODE1 = 1,  
    BCM2835_SPI_MODE2 = 2,  
    BCM2835_SPI_MODE3 = 3,  
}bcm2835SPIMode;
typedef enum
{
    BCM2835_SPI_CS0 = 0,     
    BCM2835_SPI_CS1 = 1,     
    BCM2835_SPI_CS2 = 2,     
    BCM2835_SPI_CS_NONE = 3, 
} bcm2835SPIChipSelect;
typedef enum
{
    BCM2835_SPI_CLOCK_DIVIDER_65536 = 0,       
    BCM2835_SPI_CLOCK_DIVIDER_32768 = 32768,   
    BCM2835_SPI_CLOCK_DIVIDER_16384 = 16384,   
    BCM2835_SPI_CLOCK_DIVIDER_8192  = 8192,    
    BCM2835_SPI_CLOCK_DIVIDER_4096  = 4096,    
    BCM2835_SPI_CLOCK_DIVIDER_2048  = 2048,    
    BCM2835_SPI_CLOCK_DIVIDER_1024  = 1024,    
    BCM2835_SPI_CLOCK_DIVIDER_512   = 512,     
    BCM2835_SPI_CLOCK_DIVIDER_256   = 256,     
    BCM2835_SPI_CLOCK_DIVIDER_128   = 128,     
    BCM2835_SPI_CLOCK_DIVIDER_64    = 64,      
    BCM2835_SPI_CLOCK_DIVIDER_32    = 32,      
    BCM2835_SPI_CLOCK_DIVIDER_16    = 16,      
    BCM2835_SPI_CLOCK_DIVIDER_8     = 8,       
    BCM2835_SPI_CLOCK_DIVIDER_4     = 4,       
    BCM2835_SPI_CLOCK_DIVIDER_2     = 2,       
    BCM2835_SPI_CLOCK_DIVIDER_1     = 1,       
} bcm2835SPIClockDivider;
typedef enum
{
    BCM2835_I2C_CLOCK_DIVIDER_2500   = 2500,      
    BCM2835_I2C_CLOCK_DIVIDER_626    = 626,       
    BCM2835_I2C_CLOCK_DIVIDER_150    = 150,       
    BCM2835_I2C_CLOCK_DIVIDER_148    = 148,       
} bcm2835I2CClockDivider;
typedef enum
{
    BCM2835_I2C_REASON_OK   	     = 0x00,      
    BCM2835_I2C_REASON_ERROR_NACK    = 0x01,      
    BCM2835_I2C_REASON_ERROR_CLKT    = 0x02,      
    BCM2835_I2C_REASON_ERROR_DATA    = 0x04,      
} bcm2835I2CReasonCodes;
typedef enum
{
    BCM2835_PWM_CLOCK_DIVIDER_32768 = 32768,   
    BCM2835_PWM_CLOCK_DIVIDER_16384 = 16384,   
    BCM2835_PWM_CLOCK_DIVIDER_8192  = 8192,    
    BCM2835_PWM_CLOCK_DIVIDER_4096  = 4096,    
    BCM2835_PWM_CLOCK_DIVIDER_2048  = 2048,    
    BCM2835_PWM_CLOCK_DIVIDER_1024  = 1024,    
    BCM2835_PWM_CLOCK_DIVIDER_512   = 512,     
    BCM2835_PWM_CLOCK_DIVIDER_256   = 256,     
    BCM2835_PWM_CLOCK_DIVIDER_128   = 128,     
    BCM2835_PWM_CLOCK_DIVIDER_64    = 64,      
    BCM2835_PWM_CLOCK_DIVIDER_32    = 32,      
    BCM2835_PWM_CLOCK_DIVIDER_16    = 16,      
    BCM2835_PWM_CLOCK_DIVIDER_8     = 8,       
    BCM2835_PWM_CLOCK_DIVIDER_4     = 4,       
    BCM2835_PWM_CLOCK_DIVIDER_2     = 2,       
    BCM2835_PWM_CLOCK_DIVIDER_1     = 1,       
} bcm2835PWMClockDivider;
    extern int bcm2835_init(void);
    extern int bcm2835_close(void);
    extern void  bcm2835_set_debug(uint8_t debug);
    extern uint32_t bcm2835_peri_read(volatile uint32_t* paddr);
    extern uint32_t bcm2835_peri_read_nb(volatile uint32_t* paddr);
    extern void bcm2835_peri_write(volatile uint32_t* paddr, uint32_t value);
    extern void bcm2835_peri_write_nb(volatile uint32_t* paddr, uint32_t value);
    extern void bcm2835_peri_set_bits(volatile uint32_t* paddr, uint32_t value, uint32_t mask);
    extern void bcm2835_gpio_fsel(uint8_t pin, uint8_t mode);
    extern void bcm2835_gpio_set(uint8_t pin);
    extern void bcm2835_gpio_clr(uint8_t pin);
    extern void bcm2835_gpio_set_multi(uint32_t mask);
    extern void bcm2835_gpio_clr_multi(uint32_t mask);
    extern uint8_t bcm2835_gpio_lev(uint8_t pin);
    extern uint8_t bcm2835_gpio_eds(uint8_t pin);
    extern void bcm2835_gpio_set_eds(uint8_t pin);
    extern void bcm2835_gpio_ren(uint8_t pin);
    extern void bcm2835_gpio_clr_ren(uint8_t pin);
    extern void bcm2835_gpio_fen(uint8_t pin);
    extern void bcm2835_gpio_clr_fen(uint8_t pin);
    extern void bcm2835_gpio_hen(uint8_t pin);
    extern void bcm2835_gpio_clr_hen(uint8_t pin);
    extern void bcm2835_gpio_len(uint8_t pin);
    extern void bcm2835_gpio_clr_len(uint8_t pin);
    extern void bcm2835_gpio_aren(uint8_t pin);
    extern void bcm2835_gpio_clr_aren(uint8_t pin);
    extern void bcm2835_gpio_afen(uint8_t pin);
    extern void bcm2835_gpio_clr_afen(uint8_t pin);
    extern void bcm2835_gpio_pud(uint8_t pud);
    extern void bcm2835_gpio_pudclk(uint8_t pin, uint8_t on);
    extern uint32_t bcm2835_gpio_pad(uint8_t group);
    extern void bcm2835_gpio_set_pad(uint8_t group, uint32_t control);
    extern void bcm2835_delay (unsigned int millis);
    extern void bcm2835_delayMicroseconds (uint64_t micros);
    extern void bcm2835_gpio_write(uint8_t pin, uint8_t on);
    extern void bcm2835_gpio_write_multi(uint32_t mask, uint8_t on);
    extern void bcm2835_gpio_write_mask(uint32_t value, uint32_t mask);
    extern void bcm2835_gpio_set_pud(uint8_t pin, uint8_t pud);
    extern void bcm2835_spi_begin(void);
    extern void bcm2835_spi_end(void);
    extern void bcm2835_spi_setBitOrder(uint8_t order);
    extern void bcm2835_spi_setClockDivider(uint16_t divider);
    extern void bcm2835_spi_setDataMode(uint8_t mode);
    extern void bcm2835_spi_chipSelect(uint8_t cs);
    extern void bcm2835_spi_setChipSelectPolarity(uint8_t cs, uint8_t active);
    extern uint8_t bcm2835_spi_transfer(uint8_t value);
    extern void bcm2835_spi_transfernb(char* tbuf, char* rbuf, uint32_t len);
    extern void bcm2835_spi_transfern(char* buf, uint32_t len);
    extern void bcm2835_spi_writenb(char* buf, uint32_t len);
    extern void bcm2835_i2c_begin(void);
    extern void bcm2835_i2c_end(void);
    extern void bcm2835_i2c_setSlaveAddress(uint8_t addr);
    extern void bcm2835_i2c_setClockDivider(uint16_t divider);
    extern void bcm2835_i2c_set_baudrate(uint32_t baudrate);
    extern uint8_t bcm2835_i2c_write(const char * buf, uint32_t len);
    extern uint8_t bcm2835_i2c_read(char* buf, uint32_t len);
    extern uint8_t bcm2835_i2c_read_register_rs(char* regaddr, char* buf, uint32_t len);
    extern uint8_t bcm2835_i2c_write_read_rs(char* cmds, uint32_t cmds_len, char* buf, uint32_t buf_len);
    extern void bcm2835_pwm_set_clock(uint32_t divisor);
    extern void bcm2835_pwm_set_mode(uint8_t channel, uint8_t markspace, uint8_t enabled);
    extern void bcm2835_pwm_set_range(uint8_t channel, uint32_t range);
    extern void bcm2835_pwm_set_data(uint8_t channel, uint32_t data);